crates/md-cli/tests/snapshots/json_snapshots__decode@liana_taproot.snap
---
source: crates/md-cli/tests/json_snapshots.rs
expression: body
---
{
  "descriptor": {
    "n": 3,
    "path_decl": {
      "data": "m/48'/0'/0'/2'",
      "tag": "Shared"
    },
    "tlv": {
      "fingerprints": null,
      "origin_path_overrides": null,
      "pubkeys": null,
      "unknown": [],
      "use_site_path_overrides": null
    },
    "tree": {
      "body": {
        "data": {
          "is_nums": true,
          "key_index": 0,
          "tree": {
            "body": {
              "data": {
                "indices": [
                  0,
                  1,
                  2
                ],
                "k": 2
              },
              "kind": "MultiKeys"
            },
            "tag": "MultiA"
          },
          "unspendable_kind": "liana_unspendable"
        },
        "kind": "Tr"
      },
      "tag": "Tr"
    },
    "use_site_path": {
      "multipath": [
        {
          "hardened": false,
          "value": 0
        },
        {
          "hardened": false,
          "value": 1
        }
      ],
      "wildcard_hardened": false
    }
  },
  "schema": "md-cli/2"
}
