crates/md-cli/tests/snapshots/json_snapshots__decode@sh_wsh_multi.snap
---
source: crates/md-cli/tests/json_snapshots.rs
expression: body
---
{
  "descriptor": {
    "n": 2,
    "path_decl": {
      "data": "m",
      "tag": "Shared"
    },
    "tlv": {
      "fingerprints": null,
      "origin_path_overrides": null,
      "pubkeys": null,
      "unknown": [],
      "use_site_path_overrides": null
    },
    "tree": {
      "body": {
        "data": [
          {
            "body": {
              "data": [
                {
                  "body": {
                    "data": {
                      "indices": [
                        0,
                        1
                      ],
                      "k": 2
                    },
                    "kind": "MultiKeys"
                  },
                  "tag": "Multi"
                }
              ],
              "kind": "Children"
            },
            "tag": "Wsh"
          }
        ],
        "kind": "Children"
      },
      "tag": "Sh"
    },
    "use_site_path": {
      "multipath": [
        {
          "hardened": false,
          "value": 0
        },
        {
          "hardened": false,
          "value": 1
        }
      ],
      "wildcard_hardened": false
    }
  },
  "schema": "md-cli/2"
}
