crates/md-cli/tests/snapshots/json_snapshots__decode@wpkh_basic.snap
---
source: crates/md-cli/tests/json_snapshots.rs
expression: body
---
{
  "descriptor": {
    "n": 1,
    "path_decl": {
      "data": "m",
      "tag": "Shared"
    },
    "tlv": {
      "fingerprints": null,
      "origin_path_overrides": null,
      "pubkeys": null,
      "unknown": [],
      "use_site_path_overrides": null
    },
    "tree": {
      "body": {
        "data": {
          "index": 0
        },
        "kind": "KeyArg"
      },
      "tag": "Wpkh"
    },
    "use_site_path": {
      "multipath": [
        {
          "hardened": false,
          "value": 0
        },
        {
          "hardened": false,
          "value": 1
        }
      ],
      "wildcard_hardened": false
    }
  },
  "schema": "md-cli/2"
}
